Public export of Nexus code:   - ac26a224c437dd526b53040e15ca882cc4acfc2a by Matthew Piggott <mpiggott@sonatype.com>
GitOrigin-RevId: ac26a224c437dd526b53040e15ca882cc4acfc2a